--- a/public/data/apps.json
+++ b/public/data/apps.json
@@ -5,6 +5,6 @@
   },
   {
     "nombre": "tumaki",
-    "url": "https://tumaki.vercel.app"
+    "url": "https://tumaki-web-site.vercel.app/"
   }
 ]
