--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-spring/web": "^10.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.7.1",
     "vite": "^7.0.4"
   },
   "devDependencies": {
